apps/base/nginx/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-http-route
  namespace: nginx
spec:
  parentRefs:
  - name: http-gateway
    namespace: gateway
  hostnames:
  - "nginx.lan.${DOMAIN}"
  - "pihole.lan.${DOMAIN}"
  - "whoami.lan.${DOMAIN}"
  - "netboot.lan.${DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-tls-route
  namespace: nginx
spec:
  parentRefs:
  - name: tls-gateway
    namespace: gateway
  hostnames:
  - "nginx.lan.${DOMAIN}"
  - "pihole.lan.${DOMAIN}"
  - "whoami.lan.${DOMAIN}"
  - "netboot.lan.${DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx
      port: 80
